--- a/style.css
+++ b/style.css
@@ -29,12 +29,61 @@ body{
 }
 ul{
     display: inline-flex;
+
 }
 a{
     text-decoration: none;
 }
 li{
     list-style: none;
-    margin-right: 2rem;
+    /* margin-right: 2rem; */
+    padding: 10px;
     font-size: 1.3rem;
+    font-size: 30px;
+}
+.footer{
+    height: 10vh;
+    width: 100%;
+    background-color: black;
+}
+.footer{
+    height: 80px;
+    width: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
+    
+}
+.footer{
+    text-align: center;
+    justify-content: space-evenly;
+    display: flex;
+    padding-top:  15px;
+    margin: 0px;
+    padding: 0px;
+}
+.body{
+    height: 90vh;
+    width: 100%;
+    
+}
+a{
+    text-decoration: none;
+}
+ a:visited{
+    color: black;
+    font-size: 50px;
+}
+a:hover{
+    color:red;
+    background-color: red;
+    color: yellow;
+    border-radius: 0px 35px 0px 35px;
+}
+a:link{
+    color: black;
+    
+}
+.logo{
+    display: flex;
 }
